--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "axios": "^1.7.2",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +22,7 @@
     "@types/react": "18.2.45",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "jest-mock-axios": "^4.7.3",
     "typescript": "5.3.3"
   }
 }
